<resources>
    <string name="app_name">Shoppertory</string>
    <string name="inventory_management">Inventory Management</string>
    <string name="phone">Phone:</string>
    <string name="password">Password:</string>
    <string name="code">Code:</string>
    <string name="verify_phone">Verify your phone number:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="inventory">Inventory</string>
    <string name="notifications">Notifications</string>
    <string name="reporting">Reporting</string>
    <string name="product_name">Product name:</string>
    <string name="product_quantity">Product quantity:</string>
    <string name="add">Add</string>
    <string name="edit_your_product_info">Edit your product info:</string>
    <string name="total_sales">Total sales:</string>
    <string name="history">History</string>
</resources>