<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_add_product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:text="More about your product:"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/edittext_background"
        android:hint="@string/product_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/txt_add_product_title" />

    <EditText
        android:id="@+id/edt_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edittext_background"
        android:hint="@string/product_quantity"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/edt_product_name" />

    <EditText
        android:id="@+id/edt_product_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edittext_background"
        android:hint="Description:"
        android:inputType="text"
        android:maxLines="3"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/edt_product_quantity" />

    <EditText
        android:id="@+id/edt_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edittext_background"
        android:hint="Price per one piece ($):"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/edt_product_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_product_price" />

</androidx.constraintlayout.widget.ConstraintLayout>